# haskbot

./: .gitignore  LICENSE  README.md  haskbot.cabal
src/Web/: Haskbot.hs
src/Web/Haskbot/: Incoming.hs  Newtypes.hs  Outgoing.hs  Plugin.hs  Request.hs  Responder.hs  SlashCommand.hs  Types.hs
